fix header max width to align spec

--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -3,5 +3,6 @@
 }
 
 .main-container {
+    max-width: 1036px;
     padding: 0px 164px 48px 164px;
 }
